--- a/index.html
+++ b/index.html
@@ -72,10 +72,11 @@
 </head>
 <body>
     <div>
-        <h1>MI lola💕</h1>
+        <h1>MONA💕</h1>
         <h2>Tengo un regalo para tí</h2>
         <button onclick="window.location.href='rosas.html'">Ver regalo☞💛</button>
     </div>
 
 </body>
 </html>
+
