--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background: url('img/file.png') no-repeat center center/cover;
+            background: url('img/mor.png') no-repeat center center/cover;
             font-family: 'Arial', sans-serif;
         }
 
@@ -79,6 +79,7 @@
 
 </body>
 </html>
+
 
 
 
